# shape_layout

./: Cargo.toml  Phase2_收尾与Phase3路线.md  Y推进策略分析与改进方案.md
examples/: bevy_visual_demo.rs  bevy_visual_demo_bak.rs  heart_demo.rs
shape_layout相关的讨论/: bevy_demo_bug_讨论.txt  bevy_demo_bug_讨论2.txt  mcp服务初探.txt  p2_code_review_round_2.txt  p2_code_review_round_3.txt  p2_收官_bevy_demo讨论.txt  shape_layout_why2.txt  shape_layout_why3.txt  shape_layout_why4.txt  shape_layout_why_who_how.txt  代码审查1.txt  如何设计装上kasuari大脑.txt  开发计划讨论.txt  开发跟进1.txt  阶段2代码审查1.txt  阶段2讨论.txt  阶段2讨论2.txt  项目y值推进等技术实现讨论-round2.txt  项目y值推进等技术实现讨论.txt
src/: element.rs  engine.rs  lib.rs  region.rs  result.rs  rules.rs  shape.rs
